<resources>
    <string name="app_name">Weather App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_weather">Current Weather</string>
    <string name="_7_day_weather">7 day weather</string>
    <string name="updatedAtTextView">Updated at:</string>
    <string name="location">Location:</string>
    <string name="temperature">Temperature:</string>
    <string name="feels_like">Feels like:</string>
    <string name="weather_icon">weather icon</string>
</resources>