<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".ui.main.MainFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tempInfoTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"></Space>

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/location" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"></Space>

        <TextView
            android:id="@+id/updatedAtTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/updatedAtTextView" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tempInfoTextView"
        android:layout_width="0dp"
        android:layout_height="435dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="136dp"
            android:layout_height="144dp"
            android:background="@color/opacity_bg"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/_02d"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.137" />

        <TextView
            android:id="@+id/currentWeatherTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/temperature"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iconImageView"
            app:layout_constraintVertical_bias="0.065" />

        <TextView
            android:id="@+id/feelsLikeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feels_like"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentWeatherTextView"
            app:layout_constraintVertical_bias="0.317" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/infoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempInfoTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#40F1EBF0"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:src="@drawable/sunrise"></ImageView>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="6dp"></Space>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sunrise"
                    android:textSize="11dp"></TextView>

                <TextView
                    android:id="@+id/sunriseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6:30am"
                    android:textSize="13dp">

                </TextView>
            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content">

            </Space>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#40F1EBF0"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:src="@drawable/sunset"></ImageView>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="6dp"></Space>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sunset"
                    android:textSize="11dp"></TextView>

                <TextView
                    android:id="@+id/sunsetTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6:30am"
                    android:textSize="13dp">

                </TextView>
            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"></Space>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#40F1EBF0"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:src="@drawable/humidity"></ImageView>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="6dp"></Space>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Humidity"
                    android:textSize="11dp"></TextView>

                <TextView
                    android:id="@+id/humidityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6:30am"
                    android:textSize="13dp">

                </TextView>
            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"></Space>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#40F1EBF0"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:src="@drawable/wind"></ImageView>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="6dp"></Space>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wind Speed"
                    android:textSize="11dp"></TextView>

                <TextView
                    android:id="@+id/windSpeedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6:30am"
                    android:textSize="13dp">

                </TextView>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/currentWeatherButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/sky_blue"
            android:clickable="false"
            android:text="Current Weather" />

        <Button
            android:id="@+id/sevenDayWeatherButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/coral_pink"
            android:text="7 Day Weather" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>